--- a/Toggl.Foundation/Resources.resx
+++ b/Toggl.Foundation/Resources.resx
@@ -495,4 +495,10 @@ account is not set up</value>
     <data name="Calendar">
         <value>Calendar</value>
     </data>
+    <data name="InvalidEmail">
+        <value>The email is invalid.</value>
+    </data>
+    <data name="PasswordTooShort">
+        <value>Password should be at least 6 characters</value>
+    </data>
 </root>
