🔑 ForgotPassword screen for iOS (#3983)
### Relationships
Part of #3910

## How is it done?
"Contact Us" button is added to the UI which opens the support webpage if user encounters > 2 errors.

### Side effects
None

## Review hints
None beside functionally testing it.

## :squid: Permissions
🔑
<!-- Is anybody else allowed to merge this? If so, who? -->

--- a/Toggl.Foundation/Resources.resx
+++ b/Toggl.Foundation/Resources.resx
@@ -495,4 +495,10 @@ account is not set up</value>
     <data name="Calendar">
         <value>Calendar</value>
     </data>
+    <data name="ContactUs">
+        <value>Contact Us</value>
+    </data>
+    <data name="ContactUsUrl">
+        <value>https://support.toggl.com/</value>
+    </data>
 </root>
