:construction: Forgot Password UI update (#4062)
## What's this?
Implements the new workflow for forgot password screen.

### Relationships
Implements part of #3969 

## Why do we want this?
To make it simpler for users.

## How is it done?
Not much has changed in comparison to the old one.

### Side effects
Should be none.

## Review hints
If you are testing the app functionally, know that multiple requests with the same email in short timespan will result in an error that we can't differentiate from unknown/email error, so expect a confusing message there. Until we solve the JSON ERROR API issues accross clients/BE, there's nothing we can do here.

## :squid: Permissions
🔑  people.

--- a/Toggl.Foundation/Resources.resx
+++ b/Toggl.Foundation/Resources.resx
@@ -216,6 +216,9 @@ time entries will appear here.</value>
     <data name="PasswordResetExplanation">
         <value>Please enter your email to reset your password.</value>
     </data>
+    <data name="PasswordResetInvalidEmailError">
+        <value>Please check that the email is entered correctly</value>
+    </data>
     <data name="PasswordResetSuccess">
         <value>We just sent you an email. Please follow the link in the email to reset your password.</value>
     </data>
